// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<textarea> demo: render [auto-size] correctly 1`] = `
"<div class=\\"arco-textarea-wrapper\\">
  <div class=\\"arco-textarea-mirror\\">This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea.
  </div><textarea class=\\"arco-textarea\\"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>
<div style=\\"margin-top: 20px;\\" class=\\"arco-textarea-wrapper\\">
  <div class=\\"arco-textarea-mirror\\">This is the contents of the textarea. This is the contents of the textarea. This is the contents of the textarea.
  </div><textarea class=\\"arco-textarea\\"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`<textarea> demo: render [basic] correctly 1`] = `
"<div class=\\"arco-textarea-wrapper\\">
  <!--v-if--><textarea class=\\"arco-textarea\\" placeholder=\\"Please enter something\\"></textarea>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`<textarea> demo: render [status] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\" style=\\"width: 100%;\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"arco-textarea-wrapper arco-textarea-disabled\\">
      <!--v-if--><textarea disabled=\\"\\" class=\\"arco-textarea\\" placeholder=\\"Disabled status\\"></textarea>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-textarea-wrapper arco-textarea-error\\">
      <!--v-if--><textarea class=\\"arco-textarea\\" placeholder=\\"Error status\\"></textarea>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</div>"
`;

exports[`<textarea> demo: render [word-limit] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical arco-space-fill\\">
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <div class=\\"arco-textarea-wrapper\\">
      <!--v-if--><textarea class=\\"arco-textarea\\" placeholder=\\"Please enter something\\"></textarea>
      <div class=\\"arco-textarea-word-limit\\">0/10</div>
      <!--v-if-->
    </div>
  </div>
  <div class=\\"arco-space-item\\">
    <div class=\\"arco-textarea-wrapper\\">
      <!--v-if--><textarea class=\\"arco-textarea\\" placeholder=\\"Please enter something\\"></textarea>
      <div class=\\"arco-textarea-word-limit\\">0/10</div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;
